# Kadaster-code

./: .gitignore  .ruff.toml  Data_preprocessing.py  Evaluate.py  Hyperparameters.py  Image_load.py  JSON_download.py  Kadaster_Model.ipynb  Model.py  README.md  all python.ipynb  all-python.ipynb  brt-achtergrondkaart-standaard-only-marked-labels.map  brt-achtergrondkaart-standaard-zonder-achtergrond.map  brt-achtergrondkaart-standaard-zonder-gebouwen.map  brt-achtergrondkaart-standaard-zonder-labels.map  brt-achtergrondkaart-standaard.map  config.py  download_images.py  get_data.txt  main.py  process_images.py  pyproject.toml  requirements.txt  run_notebook.sh  setup.py  test_gpu.py  train_model.py  zutphen met labels  zutphen-zonder-labels.json
Map_config_files/: brt-achtergrondkaart-standaard-alles-wit.map  brt-achtergrondkaart-standaard-only-marked-labels.map  fonts.list
Python_Code/: Hyperparameters.py  Loss_functions.py  Model.py  QGIS_code.py  config.py  main.py
code/: download_images.py  process_images.py  train_model.py
kadaster_code/: __main__.py  download.py  process.py  train.py
kadaster_code/data/: downloader.py  preprocessor.py
kadaster_code/models/: autoencoder.py
python codes/: JSON extraction.ipynb
